ARM64: configs: Regenerate
Signed-off-by: Diaz1401 <diaznura@outlook.com>

--- a/arch/arm64/configs/cat_defconfig
+++ b/arch/arm64/configs/cat_defconfig
@@ -80,7 +80,7 @@ CONFIG_PREEMPT_COUNT=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 CONFIG_HAVE_SCHED_AVG_IRQ=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
@@ -153,7 +153,6 @@ CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
 CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
@@ -794,6 +793,7 @@ CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
+# CONFIG_PROCESS_RECLAIM is not set
 CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 # CONFIG_KSM is not set
@@ -810,24 +810,14 @@ CONFIG_CMA_AREAS=16
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
-CONFIG_VMAP_LAZY_PURGING_FACTOR=32
 # CONFIG_MM_EVENT_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 # CONFIG_DEFERRED_STRUCT_PAGE_INIT is not set
 # CONFIG_IDLE_PAGE_TRACKING is not set
 # CONFIG_PERCPU_STATS is not set
-CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
-CONFIG_SPECULATIVE_PAGE_FAULT=y
-CONFIG_HAVE_USERSPACE_LOW_MEMORY_KILLER=y
 # CONFIG_GUP_BENCHMARK is not set
 CONFIG_ARCH_HAS_PTE_SPECIAL=y
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
-# CONFIG_LRU_GEN_STATS is not set
-CONFIG_NR_LRU_GENS=7
-CONFIG_TIERS_PER_GEN=4
-CONFIG_PROCESS_RECLAIM=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 CONFIG_NET_INGRESS=y
@@ -5322,7 +5312,6 @@ CONFIG_QCOM_KGSL=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 CONFIG_QCOM_KGSL_IOMMU=y
 # CONFIG_QCOM_KGSL_USE_SHMEM is not set
-# CONFIG_QCOM_KGSL_PROCESS_RECLAIM is not set
 # CONFIG_LEGACY_ENERGY_MODEL_DT is not set
 
 #
@@ -5919,7 +5908,6 @@ CONFIG_MAGIC_SYSRQ_SERIAL=y
 # Memory Debugging
 #
 # CONFIG_PAGE_EXTENSION is not set
-# CONFIG_DEBUG_PANIC_ON_OOM is not set
 # CONFIG_PAGE_POISONING is not set
 # CONFIG_DEBUG_RODATA_TEST is not set
 # CONFIG_SLUB_STATS is not set
